test chicago texi

--- a/streamer.properties
+++ b/streamer.properties
@@ -2,7 +2,10 @@
 aot-data-dir=/home/cloudera/Downloads/chicago-complete.daily.2019-09-03
 # optional
 #aot-data-file=
-taxi-data-path=/some/path
+taxi-data-path=D:/gisdata/chicago/taxi.csv
+
+raw-map-data-path=D:/gisdata/chicago/streets.csv
+formated-map-data-path=D:/gisdata/chicago/formated
 # with the daily normals data
 # climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
 climate-data-dir=D:/ghcnd_all/ghcnd_all
