--- a/streamer.properties
+++ b/streamer.properties
@@ -1,18 +1,11 @@
-# aot-data-dir=/Users/furqan/Workspace/iotdb/sample_data/chicago-complete.daily.2019-03-31/
-aot-data-dir=/home/cloudera/Downloads/chicago-complete.daily.2019-09-03
-# optional
-#aot-data-file=
-taxi-data-path=D:/gisdata/chicago/taxi.csv
 
-raw-map-data-path=D:/gisdata/chicago/streets.csv
-formated-map-data-path=D:/gisdata/chicago/formated
-# with the daily normals data
-# climate-data-dir=C:/Users/t84122723/Downloads/ghcnd_all/ghcnd_all
-climate-data-dir=D:/ghcnd_all/ghcnd_all
-climate-data-dir-small=D:/ghcnd_all/ghcnd_small
-climate-data-dir-tiny=D:/climate/transposed
+windows-root-folder=D:/gisdata
+linux-root-folder=/gisdata
 
-# with stations and states information
-climate-meta-dir=D:/data/climate
+taxi-data-path=/chicago/taxi.csv
+raw-map-data-path=/chicago/streets.csv
+formated-map-data-path=/chicago/formated
+
+
 stream-host=127.0.0.1
 stream-port=9000
