--- a/src/Makefile
+++ b/src/Makefile
@@ -45,6 +45,9 @@ datagen:	tools/datagen.o $(GEOMETRY_OBJS) $(TRACING_OBJS)
 trace:	tools/trace.o $(GEOMETRY_OBJS) $(TRACING_OBJS)
 	$(CXX) -o ../build/$@ $^ $(LIBS) 
 	
+printtrace:	tools/printtrace.o $(GEOMETRY_OBJS) $(TRACING_OBJS)
+	$(CXX) -o ../build/$@ $^ $(LIBS) 
+	
 cudatest:	tools/cudatest.o $(CU_OBJS)
 	$(CXX) -o ../build/$@ $^ $(LIBS) $(CUDALIBS)
 	
