--- a/src/Makefile
+++ b/src/Makefile
@@ -29,7 +29,7 @@ ifdef USE_GPU
 endif
 
 %_cu.o: %.cu
-	$(NVCC) -c -g -std=c++11 $(INCLUDES) -o $@ $<	
+	$(NVCC) -c -g -std=c++11 -DCUB_IGNORE_DEPRECATED_CPP_DIALECT $(INCLUDES) -o $@ $<	
 	
 %.o:	%.cpp
 	$(CXX) -c $(CPPFLAGS) $(INCLUDES) -o $@ $<	
