--- a/src/Makefile
+++ b/src/Makefile
@@ -6,8 +6,8 @@ SRCS := $(wildcard */*.cpp)
 OBJS := $(patsubst %.cpp,%.o,$(SRCS))
 
 INCLUDES	= -I /usr/include -I ./src -I /usr/local/cuda/targets/x86_64-linux/include/
-LIBS		= -L/usr/lib/x86_64-linux-gnu -lboost_program_options -lpthread
-CPPFLAGS	= -g -std=c++11 -Wno-cpp
+LIBS		= -L/usr/lib/x86_64-linux-gnu -lboost_program_options -lpthread -fopenmp
+CPPFLAGS	= -g -std=c++11 -Wno-cpp -fopenmp
 
 CUDALIBS	= -L/usr/local/cuda/lib64 -lcudart
 
